# agent_ticket_system

./: .env.example  .gitignore  .pylintrc  CLAUDE.md  README.md  main.py  package-lock.json  package.json  pyproject.toml  vitest.config.js
.github/workflows/: ci.yml
app/: indexer.py  logger.py  models.py  repo_tools.py  search_tools.py  storage.py
app/agents/: creator.py  enricher.py  healer.py  kickstart.py  splitter.py  validator.py
app/api/: agents.py  logs.py  rag.py  source.py  tickets.py
data/: agent_logs.jsonl  tickets.json
doc/: fe_refactor.md  harness_engineering.md  improve_idea_gemini.txt  improve_idea_gpt.txt  plan.md  product_req_gemini.md  product_req_gpt.md  rag_ideas.md
static/: index.html  landing.html  logs.html  review.html  shared.css  shared.js  ticket.html
static/pages/: agent_metrics.css  agent_metrics.js  agents.css  agents.js  index.css  index.js  insights.css  landing.css  landing.js  logs.css  logs.js  rag.css  rag.js  review.css  review.js  ticket.css  ticket.js  ticket_metrics.css  ticket_metrics.js
templates/: agent_metrics.html  agents.html  base.html  index.html  landing.html  logs.html  rag.html  review.html  ticket.html  ticket_metrics.html
tests/: conftest.py  test_api.py  test_creator.py  test_enricher.py  test_healer.py  test_indexer.py  test_integration.py  test_kickstart.py  test_logger.py  test_models.py  test_repo_tools.py  test_search_tools.py  test_storage.py  test_validator.py
tests/js/: index.test.js  shared.test.js
