[project]
name = "agent-ticket-system"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "langgraph>=0.2",
    "langchain-openai>=0.1",
    "openai>=1.30",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "pygithub>=2.3",
    "duckduckgo-search>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pylint>=4.0.5",
]
